.jjconflict-base-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__module_access.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
---
let
  hero' = builtins.import ./../../package/hero.nix;
  
  main =
    { }:
    let
      name = "Tony Stark";
    in
    if name == hero'.ironman.name then let n = name; in true
    else false;
in
{ inherit main; }
